tests/istio/istio-install/base/test_data/expected/networking.istio.io_v1alpha3_destinationrule_istio-telemetry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    app: mixer
    chart: mixer
    heritage: Tiller
    release: istio
  name: istio-telemetry
  namespace: kubeflow
spec:
  host: istio-telemetry.istio-system.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 10000
        maxRequestsPerConnection: 10000
